spacing fixed

--- a/app/assets/stylesheets/static_pages.scss
+++ b/app/assets/stylesheets/static_pages.scss
@@ -166,7 +166,6 @@ footer {
   justify-content: space-between;
   height: 50px;
   bottom: 0px;
-  background-color: pink;
 }
 
 // container to keep everything visible
